[FIX]: web-ui: update overflowable line-height

--- a/packages/web-ui/src/core/OverflowableText/index.less
+++ b/packages/web-ui/src/core/OverflowableText/index.less
@@ -10,7 +10,7 @@
             overflow-wrap: normal;
             white-space: nowrap;
             display: inline-block;
-            line-height: 10px;
+            line-height: 1;
         }
     }
 
